@@ -3,12 +3,11 @@ package com.example.mrpdataservice.serviceimpl;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -18,6 +17,7 @@ import com.example.mrpdataservice.entity.LotSize;
 import com.example.mrpdataservice.exception.AlreadyExistsException;
 import com.example.mrpdataservice.exception.ExcelFileException;
 import com.example.mrpdataservice.exception.ResourceNotFoundException;
+import com.example.mrpdataservice.mapping.LotSizeMapper;
 import com.example.mrpdataservice.repository.LotSizeRepo;
 import com.example.mrpdataservice.request.LotSizeRequest;
 import com.example.mrpdataservice.response.LotSizeResponse;
@@ -33,7 +33,7 @@ import lombok.RequiredArgsConstructor;
 public class LotSizeServiceImpl implements LotSizeService {
 	private final LotSizeRepo lotSizeRepo;
 	private final ExcelFileHelper excelFileHelper;
-	private final ModelMapper modelMapper;
+	private final LotSizeMapper lotSizeMapper;
 	private final DynamicClient dynamicClient;
 
 	@Override
@@ -43,18 +43,10 @@ public class LotSizeServiceImpl implements LotSizeService {
 		boolean exists = lotSizeRepo.existsByLotSizeCodeAndLotSizeName(lotSizeRequest.getLotSizeCode(),
 				lotSizeRequest.getLotSizeName());
 		if (!exists) {
-			LotSize lotSize = modelMapper.map(lotSizeRequest, LotSize.class);
-			for (Map.Entry<String, Object> entryField : lotSize.getDynamicFields().entrySet()) {
-				String fieldName = entryField.getKey();
-				String formName = LotSize.class.getSimpleName();
-				boolean fieldExists = dynamicClient.checkFieldNameInForm(fieldName, formName);
-				if (!fieldExists) {
-					throw new ResourceNotFoundException("Field of '" + fieldName
-							+ "' not exist in Dynamic Field creation for form '" + formName + "' !!");
-				}
-			}
+			LotSize lotSize = lotSizeMapper.mapToLotSize(lotSizeRequest);
+			validateDynamicFields(lotSize);
 			lotSizeRepo.save(lotSize);
-			return mapToLotSizeResponse(lotSize);
+			return lotSizeMapper.mapToLotSizeResponse(lotSize);
 		} else {
 			throw new AlreadyExistsException("LotSize with this name already exists");
 		}
@@ -63,13 +55,12 @@ public class LotSizeServiceImpl implements LotSizeService {
 	@Override
 	public LotSizeResponse getLotSizeById(Long id) throws ResourceNotFoundException {
 		LotSize lotSize = this.findLotSizeById(id);
-		return mapToLotSizeResponse(lotSize);
+		return lotSizeMapper.mapToLotSizeResponse(lotSize);
 	}
 
 	@Override
 	public List<LotSizeResponse> getAllLotSize() {
-		List<LotSize> lotSize = lotSizeRepo.findAllByOrderByIdAsc();
-		return lotSize.stream().map(this::mapToLotSizeResponse).toList();
+		return lotSizeRepo.findAllByOrderByIdAsc().stream().map(lotSizeMapper::mapToLotSizeResponse).toList();
 	}
 
 	@Override
@@ -115,7 +106,7 @@ public class LotSizeServiceImpl implements LotSizeService {
 			}
 			existingLotSize.updateAuditHistory(auditFields);
 			lotSizeRepo.save(existingLotSize);
-			return mapToLotSizeResponse(existingLotSize);
+			return lotSizeMapper.mapToLotSizeResponse(existingLotSize);
 
 		} else {
 			throw new AlreadyExistsException("LotSize with this name already exists");
@@ -136,7 +127,7 @@ public class LotSizeServiceImpl implements LotSizeService {
 			existingLotSize.updateAuditHistory(auditFields);
 		});
 		lotSizeRepo.saveAll(existingLotSizes);
-		return existingLotSizes.stream().map(this::mapToLotSizeResponse).toList();
+		return existingLotSizes.stream().map(lotSizeMapper::mapToLotSizeResponse).toList();
 	}
 
 	@Override
@@ -151,19 +142,23 @@ public class LotSizeServiceImpl implements LotSizeService {
 		}
 		existingLotSize.updateAuditHistory(auditFields);
 		lotSizeRepo.save(existingLotSize);
-		return mapToLotSizeResponse(existingLotSize);
+		return lotSizeMapper.mapToLotSizeResponse(existingLotSize);
 	}
 
 	@Override
 	public void deleteLotSize(Long id) throws ResourceNotFoundException {
 		LotSize lotSize = this.findLotSizeById(id);
-		lotSizeRepo.deleteById(lotSize.getId());
+		if (lotSize != null) {
+			lotSizeRepo.delete(lotSize);
+		}
 	}
 
 	@Override
 	public void deleteBatchLotSize(List<Long> ids) throws ResourceNotFoundException {
-		this.findAllLotSizeById(ids);
-		lotSizeRepo.deleteAllByIdInBatch(ids);
+		List<LotSize> lotSizes = this.findAllLotSizeById(ids);
+		if (!lotSizes.isEmpty()) {
+			lotSizeRepo.deleteAll(lotSizes);
+		}
 	}
 
 	@Override
@@ -214,32 +209,38 @@ public class LotSizeServiceImpl implements LotSizeService {
 		return lotSize;
 	}
 
-	private LotSizeResponse mapToLotSizeResponse(LotSize lotSize) {
-		return modelMapper.map(lotSize, LotSizeResponse.class);
+	private void validateDynamicFields(LotSize lotSize) throws ResourceNotFoundException {
+		for (Map.Entry<String, Object> entryField : lotSize.getDynamicFields().entrySet()) {
+			String fieldName = entryField.getKey();
+			String formName = LotSize.class.getSimpleName();
+			boolean fieldExists = dynamicClient.checkFieldNameInForm(fieldName, formName);
+			if (!fieldExists) {
+				throw new ResourceNotFoundException("Field of '" + fieldName
+						+ "' not exist in Dynamic Field creation for form '" + formName + "' !!");
+			}
+		}
 	}
 
 	private LotSize findLotSizeById(Long id) throws ResourceNotFoundException {
-		Helpers.validateId(id);
-		Optional<LotSize> lotSize = lotSizeRepo.findById(id);
-		if (lotSize.isEmpty()) {
-			throw new ResourceNotFoundException("LotSize with ID " + id + " not found");
-		}
-		return lotSize.get();
+		return lotSizeRepo.findById(id)
+				.orElseThrow(() -> new ResourceNotFoundException("LotSize with ID " + id + " not found"));
 	}
 
 	private List<LotSize> findAllLotSizeById(List<Long> ids) throws ResourceNotFoundException {
-		Helpers.validateIds(ids);
+
 		List<LotSize> lotSizes = lotSizeRepo.findAllById(ids);
-		// Check for missing IDs
-		List<Long> missingIds = ids.stream()
-				.filter(id -> lotSizes.stream().noneMatch(entity -> entity.getId().equals(id)))
-				.collect(Collectors.toList());
+
+		Set<Long> idSet = new HashSet<>(ids);
+
+		List<LotSize> foundLotSizes = lotSizes.stream().filter(entity -> idSet.contains(entity.getId())).toList();
+
+		List<Long> missingIds = ids.stream().filter(id -> !idSet.contains(id)).toList();
 
 		if (!missingIds.isEmpty()) {
-			// Handle missing IDs, you can log a message or throw an exception
 			throw new ResourceNotFoundException("Lot Sizes with IDs " + missingIds + " not found.");
 		}
-		return lotSizes;
+
+		return foundLotSizes;
 	}
 
 }
