@@ -4,10 +4,10 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
-import org.springframework.cache.annotation.Cacheable;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 
 import com.example.generalservice.client.DynamicClient;
@@ -17,6 +17,7 @@ import com.example.generalservice.entity.AuditFields;
 import com.example.generalservice.entity.InspectionCode;
 import com.example.generalservice.exceptions.ResourceFoundException;
 import com.example.generalservice.exceptions.ResourceNotFoundException;
+import com.example.generalservice.mapping.InspectionCodeMapper;
 import com.example.generalservice.repository.InspectionCodeRepository;
 import com.example.generalservice.service.interfaces.InspectionCodeService;
 import com.example.generalservice.utils.Helpers;
@@ -27,7 +28,7 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class InspectionCodeServiceImpl implements InspectionCodeService {
 	private final InspectionCodeRepository inspectionCodeRepository;
-	private final ModelMapper modelMapper;
+	private final InspectionCodeMapper inspectionCodeMapper;
 	private final DynamicClient dynamicClient;
 
 	@Override
@@ -36,50 +37,37 @@ public class InspectionCodeServiceImpl implements InspectionCodeService {
 		Helpers.inputTitleCase(inspectionCodeRequest);
 		String inCode = inspectionCodeRequest.getInCodeCode();
 		String inName = inspectionCodeRequest.getInCodeName();
-		boolean exists = inspectionCodeRepository.existsByInCodeCodeOrInCodeName(inCode, inName);
-		if (!exists) {
-			InspectionCode inspectionCode = modelMapper.map(inspectionCodeRequest, InspectionCode.class);
-			for (Map.Entry<String, Object> entryField : inspectionCode.getDynamicFields().entrySet()) {
-				String fieldName = entryField.getKey();
-				String formName = InspectionCode.class.getSimpleName();
-				boolean fieldExists = dynamicClient.checkFieldNameInForm(fieldName, formName);
-				if (!fieldExists) {
-					throw new ResourceNotFoundException("Field of '" + fieldName
-							+ "' not exist in Dynamic Field creation for form '" + formName + "' !!");
-				}
-			}
-			InspectionCode savedInCode = inspectionCodeRepository.save(inspectionCode);
-			return mapToCodeResponse(savedInCode);
-		} else {
+		if (inspectionCodeRepository.existsByInCodeCodeOrInCodeName(inCode, inName)) {
 			throw new ResourceFoundException("Inspection Code Already Exist");
 		}
+		InspectionCode inspectionCode = inspectionCodeMapper.mapToInspectionCode(inspectionCodeRequest);
+		validateDynamicFields(inspectionCode);
+
+		InspectionCode savedInCode = inspectionCodeRepository.save(inspectionCode);
+		return inspectionCodeMapper.mapToCodeResponse(savedInCode);
 	}
 
 	@Override
-	@Cacheable("inCode")
-	public InspectionCodeResponse getInCodeById(Long id) throws ResourceNotFoundException {
+	public InspectionCodeResponse getInCodeById(@NonNull Long id) throws ResourceNotFoundException {
 		InspectionCode inspectionCode = this.findInCodeById(id);
-		return mapToCodeResponse(inspectionCode);
+		return inspectionCodeMapper.mapToCodeResponse(inspectionCode);
 	}
 
 	@Override
-	@Cacheable("inCode")
 	public List<InspectionCodeResponse> getAllInCode() {
-		List<InspectionCode> inspectionCodes = inspectionCodeRepository.findAll();
-		return inspectionCodes.stream().sorted(Comparator.comparing(InspectionCode::getId)).map(this::mapToCodeResponse)
-				.toList();
+		return inspectionCodeRepository.findAll().stream().sorted(Comparator.comparing(InspectionCode::getId))
+				.map(inspectionCodeMapper::mapToCodeResponse).toList();
 	}
 
 	@Override
-	@Cacheable("inCode")
 	public List<InspectionCodeResponse> findAllStatusTrue() {
-		List<InspectionCode> inspectionCodes = inspectionCodeRepository.findAllByInCodeStatusIsTrue();
-		return inspectionCodes.stream().sorted(Comparator.comparing(InspectionCode::getId)).map(this::mapToCodeResponse)
+		return inspectionCodeRepository.findAllByInCodeStatusIsTrue().stream()
+				.sorted(Comparator.comparing(InspectionCode::getId)).map(inspectionCodeMapper::mapToCodeResponse)
 				.toList();
 	}
 
 	@Override
-	public InspectionCodeResponse updateInCode(Long id, InspectionCodeRequest updateInspectionCodeRequest)
+	public InspectionCodeResponse updateInCode(@NonNull Long id, InspectionCodeRequest updateInspectionCodeRequest)
 			throws ResourceNotFoundException, ResourceFoundException {
 		Helpers.validateId(id);
 		Helpers.inputTitleCase(updateInspectionCodeRequest);
@@ -119,13 +107,13 @@ public class InspectionCodeServiceImpl implements InspectionCodeService {
 			}
 			existingInspectionCode.updateAuditHistory(auditFields);
 			InspectionCode updatedInspectionCode = inspectionCodeRepository.save(existingInspectionCode);
-			return mapToCodeResponse(updatedInspectionCode);
+			return inspectionCodeMapper.mapToCodeResponse(updatedInspectionCode);
 		}
 		throw new ResourceFoundException("Inspection code Already exist");
 	}
 
 	@Override
-	public InspectionCodeResponse updateInCodeStatus(Long id) throws ResourceNotFoundException {
+	public InspectionCodeResponse updateInCodeStatus(@NonNull Long id) throws ResourceNotFoundException {
 		InspectionCode existingInspectionCode = this.findInCodeById(id);
 		// Find properties that have changed
 		List<AuditFields> auditFields = new ArrayList<>();
@@ -136,11 +124,12 @@ public class InspectionCodeServiceImpl implements InspectionCodeService {
 		}
 		existingInspectionCode.updateAuditHistory(auditFields);
 		inspectionCodeRepository.save(existingInspectionCode);
-		return mapToCodeResponse(existingInspectionCode);
+		return inspectionCodeMapper.mapToCodeResponse(existingInspectionCode);
 	}
 
 	@Override
-	public List<InspectionCodeResponse> updateBatchInCodeStatus(List<Long> ids) throws ResourceNotFoundException {
+	public List<InspectionCodeResponse> updateBatchInCodeStatus(@NonNull List<Long> ids)
+			throws ResourceNotFoundException {
 		List<InspectionCode> inspectionCodes = this.findAllById(ids);
 		// Find properties that have changed
 		List<AuditFields> auditFields = new ArrayList<>();
@@ -154,42 +143,48 @@ public class InspectionCodeServiceImpl implements InspectionCodeService {
 
 		});
 		inspectionCodeRepository.saveAll(inspectionCodes);
-		return inspectionCodes.stream().map(this::mapToCodeResponse).toList();
+		return inspectionCodes.stream().map(inspectionCodeMapper::mapToCodeResponse).toList();
 	}
 
 	@Override
-	public void deleteInCodeId(Long id) throws ResourceNotFoundException {
+	public void deleteInCodeId(@NonNull Long id) throws ResourceNotFoundException {
 		InspectionCode inspectionCode = this.findInCodeById(id);
-		inspectionCodeRepository.deleteById(inspectionCode.getId());
+		if (inspectionCode != null) {
+			inspectionCodeRepository.delete(inspectionCode);
+		}
 	}
 
 	@Override
-	public void deleteBatchInCode(List<Long> ids) throws ResourceNotFoundException {
-		this.findAllById(ids);
-		inspectionCodeRepository.deleteAllByIdInBatch(ids);
-	}
-
-	private InspectionCodeResponse mapToCodeResponse(InspectionCode inspectionCode) {
-		return modelMapper.map(inspectionCode, InspectionCodeResponse.class);
-	}
-
-	private InspectionCode findInCodeById(Long id) throws ResourceNotFoundException {
-		Helpers.validateId(id);
-		Optional<InspectionCode> inspectionCode = inspectionCodeRepository.findById(id);
-		if (inspectionCode.isEmpty()) {
-			throw new ResourceNotFoundException("No Inspection found with this Id");
+	public void deleteBatchInCode(@NonNull List<Long> ids) throws ResourceNotFoundException {
+		List<InspectionCode> inspectionCodes = this.findAllById(ids);
+		if (!inspectionCodes.isEmpty()) {
+			inspectionCodeRepository.deleteAll(inspectionCodes);
 		}
-		return inspectionCode.get();
 	}
 
-	private List<InspectionCode> findAllById(List<Long> ids) throws ResourceNotFoundException {
-		Helpers.validateIds(ids);
+	private void validateDynamicFields(InspectionCode inspectionCode) throws ResourceNotFoundException {
+		for (Map.Entry<String, Object> entryField : inspectionCode.getDynamicFields().entrySet()) {
+			String fieldName = entryField.getKey();
+			String formName = InspectionCode.class.getSimpleName();
+			boolean fieldExists = dynamicClient.checkFieldNameInForm(fieldName, formName);
+			if (!fieldExists) {
+				throw new ResourceNotFoundException("Field of '" + fieldName
+						+ "' not exist in Dynamic Field creation for form '" + formName + "' !!");
+			}
+		}
+
+	}
+
+	private InspectionCode findInCodeById(@NonNull Long id) throws ResourceNotFoundException {
+		return inspectionCodeRepository.findById(id)
+				.orElseThrow(() -> new ResourceNotFoundException("No Inspection found with this Id"));
+	}
+
+	private List<InspectionCode> findAllById(@NonNull List<Long> ids) throws ResourceNotFoundException {
 		List<InspectionCode> inspectionCodes = inspectionCodeRepository.findAllById(ids);
-		// Check for missing IDs
-		List<Long> missingIds = ids.stream()
-				.filter(id -> inspectionCodes.stream().noneMatch(entity -> entity.getId().equals(id))).toList();
+		Set<Long> foundIds = inspectionCodes.stream().map(InspectionCode::getId).collect(Collectors.toSet());
+		List<Long> missingIds = ids.stream().filter(id -> !foundIds.contains(id)).collect(Collectors.toList());
 		if (!missingIds.isEmpty()) {
-			// Handle missing IDs, you can log a message or throw an exception
 			throw new ResourceNotFoundException("Inspection Code with IDs " + missingIds + " not found");
 		}
 		return inspectionCodes;
